# Runex

./: .gitignore  README.md  pyproject.toml
cantrips/: general_functions.py
devtools/python/: requirements.txt
grimoires/ExcelBridge/: vba_portal.py
setups/Linux/: miniconda_env_manager.sh
src/runex/: __init__.py
src/runex/engine/: __init__.py  dirwiz.py
src/runex/ops/: __init__.py  ask.py  common.py  dirops.py  load.py  lprint.py  tabular.py  utils.py
src/runex/workflow/: __init__.py  dirops.py
src_vba/: ExcelBridge.xlsm
