[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runex"                # Your internal project name — doesn't matter to GitHub
version = "0.1.0"
description = "Minimal, typed utility functions—symbols you can run."
authors = [{ name = "Lex" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
"runex" = ["py.typed"]
