[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runex"
version = "1.0.0" #### VERSION

description = "Minimal, typed utility functions—symbols you can run."
authors = [{ name = "Lex" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

[project.urls]
homepage = "https://github.com/lex/runex"

[project.optional-dependencies]
spreadsheets = [
    "pandas",
    "openpyxl",
    "xlrd",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
"runex" = ["py.typed"]
